# nano-gpt

./: .gitignore  Cargo.toml  README.md
src/: data.rs  main.rs  model.rs  training.rs
