[package]
name = "nano-gpt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "train"
path = "src/main.rs"

[dependencies]
# Burn core: tensors, nn modules, the Module/Learner traits
burn = { version = "0.21", features = ["train", "ndarray"] }

# Pure-Rust CPU backend — no CUDA/Metal drivers needed to get started.
# Swap in burn-cuda or burn-wgpu later with a one-line change.
burn-ndarray = { version = "0.21" }

# Config and checkpoint serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# RNG for data shuffling and inference sampling
rand = "0.8"
