[package]
name = "nano-gpt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "train"
path = "src/main.rs"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"

[dependencies]
# Burn core: tensors, nn modules, the Module/Learner traits
burn = { version = "0.21", features = ["train", "wgpu"] }

# wgpu backend — runs on Metal (Apple Silicon / Intel GPU) via WebGPU
burn-wgpu = { version = "0.21" }

# Config and checkpoint serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# RNG for data shuffling and inference sampling
rand = "0.8"
